# rust-graphql-test

./: .gitignore  Cargo.toml  Dockerfile  README.md
config/: base.toml
config/prod/: config.toml
src/: logger.rs  main.rs  routes.rs  settings.rs
src/graphql/: context.rs  mod.rs  schema.rs
src/graphql/resolvers/: test.rs
