[package]
name = "rust-graphql-test"
version = "0.1.0"
description = "Test GraphQL API"
authors = ["Max Nachlinger <max.nachlinger.remove@remove.gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
actix-slog = "0.2.1"
actix-web = "3.3.2"
async-graphql = "2.8.2"
async-graphql-actix-web = "2.8.2"
anyhow = "1.0.35"
chrono = "0.4.19"
config = "0.10.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
slog = "2.7.0"
slog-json = "2.3.0"
slog-async = "2.5.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "1.1.1"

[profile.release]
lto = true
