[package]
name = "rust-graphql-test"
version = "0.1.0"
description = "Test GraphQL API"
authors = ["Max Nachlinger <max.nachlinger.remove@remove.gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
actix-slog = "0.2.1"
actix-web = "3.3.2"
async-graphql = "2.9.4"
async-graphql-actix-web = "2.9.4"
anyhow = "1.0.41"
chrono = "0.4.19"
config = "0.11.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
slog = "2.7.0"
slog-json = "2.3.0"
slog-async = "2.6.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "2.2.0"

[profile.release]
lto = true

[profile.dev]
split-debuginfo = "unpacked"
